Ingress/certificates/ingress-with-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cruise-control-ui
  namespace: kafka-upgrade
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: cruise-control-20-235-174-214.sslip.io  # CHANGE THIS for different cluster
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: cruise-control-ui
            port:
              number: 80
  tls:
  - hosts:
    - cruise-control-20-235-174-214.sslip.io  # CHANGE THIS for different cluster
    secretName: cruise-control-ui-tls
